feat(data-generator): 修复噪音告警